# documentation-sync

./: .env.example  .gitignore  README.md  gitbook-to-cookbook-mapping.csv  pyproject.toml
rago_sync/: auth.py  cli.py  config.py  state.py
rago_sync/inspector/: __init__.py  api_drift.py  drift.py  gap.py  template.py  versions.py
rago_sync/reporter/: __init__.py  email_sender.py  github_issues.py  html.py
rago_sync/syncer/: __init__.py  cookbook_updater.py  lock_manager.py  migration.py
rago_sync/verifier/: runner.py
scripts/: gitbook_cookbook_mapping.py
skills/: README.md
skills/gitbook-check-for-update/: SKILL.md
skills/gitbook-update/: SKILL.md
skills/gitbook-update/rules/: gitbook-update-how-to-guides.md  gitbook-update-resources.md  gitbook-update-tutorials.md
skills/rag-o-doc-sync-orchestrator/: SKILL.md
skills/sync-cookbook/: SKILL.md
skills/sync-cookbook/references/: datastore-gotchas.md  gitbook-drift-pipeline-how-to-jul2026.md  incident-log.md  routing-verification-notes.md  standalone-failure-patterns.md  verification_failure_patterns.md
skills/sync-cookbook/scripts/: cookbook_sync.py  generate_map.py  verify_coverage.py  verify_cross_package_imports.sh  verify_import_side_effects.py  verify_pins.sh
skills/sync-cookbook/templates/: notification_config.example.json
skills/sync-docs/: SKILL.md
tests/: conftest.py  test_cli_smoke.py  test_config.py  test_state.py
tests/inspector/: test_api_drift.py  test_drift.py  test_gap.py  test_template.py  test_versions.py
tests/syncer/: test_migration.py
tests/verifier/: test_runner.py
(+6 files in other folders)
