[project]
name = "rago-sync"
version = "0.1.0"
description = "RAGO cookbook/gitbook sync tool"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer>=0.12.0,<0.13.0",
    "rich>=13.0.0,<14.0.0",
    "jinja2>=3.1.0,<4.0.0",
]

[project.scripts]
rago-sync = "rago_sync.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0,<9.0.0"]
